# halley-kart

./: .editorconfig  .gitignore  Cargo.toml  INSTALL.md  README.md  meson.build
.github/workflows/: rust.yml
config/: config.example.yml
include/halley-kart/: backend-audio.h  backend-display.h  backend-graphics.h  backend.h  plugin-manager-client.h  plugin-manager.h  plugin.h
src/: config.rs  main.c  main.rs  plugin-manager.c
src/audio/: mod.rs
src/graphics/: mod.rs  vulkan.rs  window.rs
src/graphics/vulkan/: device.rs  drawing.rs  graphics_pipeline.rs  instance.rs  shaders.rs
subprojects/backend-audio-alsa/: meson.build
subprojects/backend-audio-alsa/src/: alsa.c
subprojects/backend-display-wayland/: meson.build
subprojects/backend-display-wayland/src/: wayland.c
subprojects/backend-display-x11/: meson.build
subprojects/backend-display-x11/src/: x11.c
subprojects/backend-graphics-vulkan/: meson.build
subprojects/backend-graphics-vulkan/src/: vulkan.c
subprojects/make-elf-blob/: meson.build
subprojects/make-elf-blob/src/: main.c
subprojects/make-plugin-elf-notes/: meson.build
subprojects/make-plugin-elf-notes/src/: main.c
subprojects/wayland-protocols/: fix-path.sh  meson.build  scan-protocol.sh
subprojects/wayland-protocols/protocols/: xdg-shell
