[package]
name = "halley-kart"
description = "A racing game. This project is experimental, please disregard for now."
version = "0.1.0"
authors = ["James Martin <james@jtmar.me>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/jamestmartin/halley-kart"
repository = "https://github.com/jamestmartin/halley-kart"
license = "GPL-3.0-or-later"
publish = false
default-run = "halley-kart"

[features]
default = ["audio-backend-jack"]

audio-backend-jack = ["cpal/jack"]

[dependencies]
uuid = "0.8.1"

## Arguments
gumdrop = "0.8.0"

## Audio
cpal = "0.13.1"

## Config
strict-yaml-rust = "0.1.1"

## Graphics
vulkano = "0.20"
vulkano-shaders = "0.20"
vulkano-win = "0.20"
winit = "0.24"

## Input
gilrs = "0.8.0"

## Logging
log = "0.4.11"
stderrlog = "0.5.0"

## Network, IO
tokio = { version = "1.0.1", features = ["rt", "net", "macros"] }

[profile.release]
# When creating a release build, compile time doesn't really matter,
# seeing as it only has to be done rarely and not iteratively.
# So, maximize the quality of the resulting binary even if it makes builds slow.
codegen-units = 1
lto = "fat"
